@@ -1,0 +1,1 @@
+error_reporting = E_ALL & ~E_DEPRECATED & ~E_USER_DEPRECATED
