@@ -235,7 +235,7 @@ function flag_requirements($phase) {
     if (module_exists('translation') && !module_exists('translation_helpers')) {
       $requirements['flag_translation'] = array(
         'title' => $t('Flag'),
-        'severity' => REQUIREMENT_ERROR,
+        'severity' => REQUIREMENT_WARNING,
         'description' => $t('To have the flag module work with translations, you need to install and enable the <a href="http://drupal.org/project/translation_helpers">Translation helpers</a> module.'),
         'value' => $t('Translation helpers module not found.'),
       );
